--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
 
 
 
-                    <a class="navbar-brand logo name" href="#">
+                    <a class="navbar-brand logo name" href="./index.html">
                         <img src="./assets/logo3.png" alt="" width="230" height="60">
                         <!-- <a class="" href="/index.html"> -->
                     </a>
@@ -104,18 +104,6 @@
                             <span class="navbar-toggler-icon"></span>
                             我要開團
                         </button> -->
-
-
-
-
-
-
-
-
-
-
-
-
 
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
@@ -167,18 +155,9 @@
                                 </li>
                             </ul>
                         </div>
-
-
-
                     </div>
-
-
-
-
                 </div>
             </nav>
-
-
         </div>
 
 
