--- a/public/profile.html
+++ b/public/profile.html
@@ -18,39 +18,81 @@
 
         <div id="header">
 
-            <div class="main-header">
-                <a class="logo name" href="/index.html">
-                    <!-- <img src="https://www.pngkit.com/png/full/207-2070900_the-gathering-logo-clear-gathering-word.png"
-                        height="48"> -->
 
-                    <img src="./assets/logo3.png" height="48">
+            <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
+                <div class="container-md">
 
 
-                </a>
-                <!-- <div class="main-nav">
-                    <a href="/index.html?tag=women" class="tag">女裝</a>
-                    <div class="tag-line">|</div>
-                    <a href="/index.html?tag=men" class="tag">男裝</a>
-                    <div class="tag-line">|</div>
-                    <a href="/index.html?tag=accessories" class="tag">配件</a>
 
-                </div> -->
 
-                <!-- <input class="search" /> -->
 
-                <!-- <a class="cart">
-                    <img src="/img/icons/cart.png" height="44" />
-                    <div class="count">0</div>
-                </a> -->
+                    <a class="navbar-brand logo name" href="./index.html">
+                        <img src="./assets/logo3.png" alt="" width="230" height="60">
+                        <!-- <a class="" href="/index.html"> -->
+                    </a>
 
-                <div class="member">
-                    <a href="/profile.html"><img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png"
-                            height="44"></a>
+                    <div id="main-header">
+                        <!-- 
+                        <button class="navbar-toggler host btn btn-primary" type="button" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation" id="hostbutton">
+                            <span class="navbar-toggler-icon"></span>
+                            我要開團
+                        </button> -->
+
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
+
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        <div class="host">
+                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                                data-bs-target="#staticBackdrop" id="hostbutton">
+                                                我要開團
+                                            </button>
+
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="nav-item" style="display: flex;">
+                                    <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
+                                            width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
+                                            viewBox="0 0 16 16">
+                                            <path
+                                                d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                                            <path
+                                                d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                                        </svg></a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
+
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
+                                            fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                            <path fill-rule="evenodd"
+                                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                        </svg>
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <li><a class="dropdown-item dropdown-sign" href="/sign.html"
+                                                style="display: block;">登入</a>
+                                        </li>
+                                        <li><a class="dropdown-item dropdown-signed" href="/profile.html"
+                                                style="display: none;">會員資料</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider dropdown-signed" style="display: none;">
+                                        </li>
+                                        <li id=signout><a class="dropdown-item dropdown-signed" href="#"
+                                                style="display: none;">登出</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
-
-
-            </div>
-
+            </nav>
         </div>
 
 
