--- a/public/index copy.html
+++ b/public/index copy.html
@@ -80,19 +80,35 @@
 
     <div class="wrap">
 
-        <!-- ---------------------- header --------------------------- -->
+
         <div id="header">
+
+
             <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
                 <div class="container-md">
 
+
+
+
+
                     <a class="navbar-brand logo name" href="./index.html">
-                        <img src="./assets/logo5.png" alt="" width="230" height="60">
+                        <img src="./assets/logo3.png" alt="" width="230" height="60">
+                        <!-- <a class="" href="/index.html"> -->
                     </a>
+
                     <div id="main-header">
+                        <!-- 
+                        <button class="navbar-toggler host btn btn-primary" type="button" data-bs-toggle="modal"
+                            data-bs-target="#staticBackdrop" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation" id="hostbutton">
+                            <span class="navbar-toggler-icon"></span>
+                            我要開團
+                        </button> -->
+
                         <div class="collapse navbar-collapse" id="navbarNavDropdown">
                             <ul class="navbar-nav">
 
-                                <li class="nav-item" style="margin: 3px 10px 0 0;">
+                                <li class="nav-item">
                                     <a class="nav-link" href="#">
                                         <div class="host">
                                             <button type="button" class="btn btn-primary" data-bs-toggle="modal"
@@ -103,7 +119,7 @@
                                         </div>
                                     </a>
                                 </li>
-                                <!-- <li class="nav-item" style="display: flex;">
+                                <li class="nav-item" style="display: flex;">
                                     <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
                                             width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
                                             viewBox="0 0 16 16">
@@ -112,7 +128,7 @@
                                             <path
                                                 d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
                                         </svg></a>
-                                </li> -->
+                                </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
                                         data-bs-toggle="dropdown" aria-expanded="false">
@@ -143,40 +159,33 @@
                 </div>
             </nav>
         </div>
-        <!-- -------------------------------------------------- -->
-
-        <div id="search-box" class="input-group rounded" style="width: 80%; margin:0 auto 3px auto;">
-            <input id="search-input" type="search" class="form-control rounded" placeholder="搜尋您想要的活動"
-                aria-label="Search" aria-describedby="search-addon" />
-            <span class="input-group-text border-0" id="search-addon">
-                <i class="bi bi-search"></i>
-            </span>
-        </div>
-
-
-        <div id="center">
-
-
-            <div id="left">
-
-
-                <!-- <div class="sibling-main" style="z-index: 999;">
-                    <div class="sibling-A"><input id="pac-input" class="controls search" type="text"
-                            placeholder="搜尋活動" />
-                    </div>
-                    <div class="sibling-B" id="cancel-search"><img
-                            src="./assets/2191538_close_cross_delete_erase_hide_icon.png" height=25>
-                    </div>
-
-                </div> -->
 
 
 
-                <!-- <div id=createEvent>
+
+
+
+
+
+        <div id="left">
+
+
+            <div class="sibling-main">
+                <div class="sibling-A"><input id="pac-input" class="controls search" type="text" placeholder="搜尋活動" />
+                </div>
+                <div class="sibling-B" id="cancel-search"><img
+                        src="./assets/2191538_close_cross_delete_erase_hide_icon.png" height=25>
+                </div>
+
+            </div>
+
+
+
+            <!-- <div id=createEvent>
                 <button>我要開團</button>
             </div> -->
-
-                <!-- <div id="hostGathering" style="display: none;">
+            <br>
+            <!-- <div id="hostGathering" style="display: none;">
                 <h3>請輸入活動資訊</h3>
 
                 <form method="post" action="/api/1.0/gatherings/hostGathering" enctype="multipart/form-data">
@@ -211,17 +220,15 @@
             </div> -->
 
 
-                <div id="gathering-list" style="height:90vh; "></div>
+            <div id="gathering-list" style="height:90vh;"></div>
 
-            </div>
-
-
+        </div>
 
 
 
-            <div id="map" style="position: absolute;"></div>
+        <div id="right">
 
-
+            <div id="map" style="position: absolute; width: 45%;"></div>
 
 
         </div>
@@ -421,7 +428,7 @@
         </div>
     </div>
 
-    <!-- -------------------------------------------- -->
+
 
 
 
@@ -635,7 +642,78 @@
                 console.log("pair", pair)
             }
 
+            // if (!Boolean(form.category.value.trim())) {
+            //     alert("Category不可為空");
+            //     return false;
+            // }
+            // if (!Boolean(form.productTitle.value.trim())) {
+            //     alert("Product Title不可為空！");
+            //     return false;
+            // }
 
+            // if (!Boolean(form.price.value.trim())) {
+            //     alert("Price不可為空");
+            //     return false;
+            // }
+
+            // if (isNaN(form.price.value)) {
+            //     alert("Price請輸入數字！");
+            //     return false;
+            // }
+
+            // if (!Boolean(form.texture.value.trim())) {
+            //     alert("Texture不可為空");
+            //     return false;
+            // }
+
+            // if (!Boolean(form.wash.value.trim())) {
+            //     alert("Wash不可為空");
+            //     return false;
+            // }
+
+
+            // if (!Boolean(form.place.value.trim())) {
+            //     alert("Place不可為空");
+            //     return false;
+            // }
+
+
+            // for (let i = 0; i < form['黑色'].length; i++) {
+            //     if (isNaN(form['黑色'][i].value)) {
+            //         alert("Stocks請輸入數字！");
+            //         return false;
+            //     }
+            // }
+
+            // for (let i = 0; i < form['藍色'].length; i++) {
+            //     if (isNaN(form['藍色'][i].value)) {
+            //         alert("Stocks請輸入數字！");
+            //         return false;
+            //     }
+            // }
+
+            // for (let i = 0; i < form['灰色'].length; i++) {
+            //     if (isNaN(form['灰色'][i].value)) {
+            //         alert("Stocks請輸入數字！");
+            //         return false;
+            //     }
+            // }
+
+            // for (let i = 0; i < form['粉紅'].length; i++) {
+            //     if (isNaN(form['粉紅'][i].value)) {
+            //         alert("Stocks請輸入數字！");
+            //         return false;
+            //     }
+            // }
+
+            // for (let i = 0; i < form['白色'].length; i++) {
+            //     if (isNaN(form['白色'][i].value)) {
+            //         alert("Stocks請輸入數字！");
+            //         return false;
+            //     }
+            // }
+
+            // alert("資料格式正確，即將為您建檔！");
 
             if (localStorage.getItem('lat')) {
 
@@ -849,8 +927,6 @@
             var toast = new bootstrap.Toast(toastDiv)
 
             toast.show()
-
-
         }
 
 
