--- a/public/sign.html
+++ b/public/sign.html
@@ -35,72 +35,76 @@
 
     <div class='wrap'>
 
+
+
+
+
+        <!-- ---------------------- header --------------------------- -->
         <div id="header">
+            <nav class="navbar navbar-light fixed-top navbar-expand-lg" style="background-color: #e3f2fd;">
+                <div class="container-md">
 
-            <div id="header">
-
-
-                <div class="main-header">
-                    <a class="logo name" href="/index.html">
-                        <!-- <img src="https://www.pngkit.com/png/full/207-2070900_the-gathering-logo-clear-gathering-word.png"
-                            height="48"> -->
-
-                        <img src="./assets/logo3.png" height="48">
-
-
+                    <a class="navbar-brand logo name" href="./index.html">
+                        <img src="./assets/logo5.png" alt="" width="230" height="60">
                     </a>
-                    <!-- <div class="main-nav">
-                        <a href="/index.html?tag=women" class="tag">女裝</a>
-                        <div class="tag-line">|</div>
-                        <a href="/index.html?tag=men" class="tag">男裝</a>
-                        <div class="tag-line">|</div>
-                        <a href="/index.html?tag=accessories" class="tag">配件</a>
-    
-                    </div> -->
+                    <div id="main-header">
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav">
 
-                    <!-- <input class="search" /> -->
+                                <!-- <li class="nav-item" style="margin: 3px 10px 0 0;">
+                                    <a class="nav-link" href="#">
+                                        <div class="host">
+                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                                data-bs-target="#staticBackdrop" id="hostbutton">
+                                                我要開團
+                                            </button>
 
-                    <!-- <a class="cart">
-                        <img src="/img/icons/cart.png" height="44" />
-                        <div class="count">0</div>
-                    </a> -->
+                                        </div>
+                                    </a>
+                                </li> -->
+                                <!-- <li class="nav-item" style="display: flex;">
+                            <a class="nav-link" id="caht" href="#"><svg xmlns=" http://www.w3.org/2000/svg"
+                                    width="47" height="47" fill="currentColor" class="bi bi-chat-left-text"
+                                    viewBox="0 0 16 16">
+                                    <path
+                                        d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H4.414A2 2 0 0 0 3 11.586l-2 2V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12.793a.5.5 0 0 0 .854.353l2.853-2.853A1 1 0 0 1 4.414 12H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z" />
+                                    <path
+                                        d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5zM3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6zm0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5z" />
+                                </svg></a>
+                        </li> -->
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
 
-                    <!-- Button trigger modal -->
-
-
-
-
-
-                    <div class="host">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#staticBackdrop" id="hostbutton">
-                            我要開團
-                        </button>
-
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="47" height="47"
+                                            fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                            <path fill-rule="evenodd"
+                                                d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                                        </svg>
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <li><a class="dropdown-item dropdown-sign" href="/sign.html"
+                                                style="display: block;">登入</a>
+                                        </li>
+                                        <li><a class="dropdown-item dropdown-signed" href="/profile.html"
+                                                style="display: none;">會員資料</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider dropdown-signed" style="display: none;">
+                                        </li>
+                                        <li id=signout><a class="dropdown-item dropdown-signed" href="#"
+                                                style="display: none;">登出</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-
-                    <div class="signinout">
-
-                        <a href="/sign.html"><img src="./assets/1031506_authorize_enter_login_sign in_signin_icon.png"
-                                height="30"></a>
-
-                    </div>
-
-
-                    <div class="member">
-                        <a href="/profile.html"><img src="https://dft5bbbk1fziz.cloudfront.net/img/icons/member.png"
-                                height="44"></a>
-                    </div>
-
-
                 </div>
-
-
-
-
-            </div>
-
+            </nav>
         </div>
+        <!-- -------------------------------------------------- -->
+
+
 
 
         <div id="left">
@@ -433,6 +437,146 @@
             }
 
 
+
+
+
+
+
+
+        </script>
+
+
+
+
+
+
+
+        <script>
+
+
+
+
+
+
+
+            document.getElementById("navbarDropdownMenuLink").addEventListener('click', () => {
+                if (!localStorage.getItem('token')) {
+                    document.getElementsByClassName('dropdown-sign')[0].style = "display: block;"
+                    let sign = document.getElementsByClassName('dropdown-signed')
+                    for (i = 0; i < sign.length; i++) {
+                        sign[i].style.display = "none";
+                    }
+
+                } else {
+                    document.getElementsByClassName('dropdown-sign')[0].style = "display: none;"
+                    let signed = document.getElementsByClassName('dropdown-signed')
+                    for (i = 0; i < signed.length; i++) {
+                        signed[i].style.display = "block";
+                    }
+
+                }
+
+            })
+
+
+            document.getElementById("signout").addEventListener('click', () => {
+                localStorage.removeItem("token")
+
+
+                Swal.fire({
+                    title: 'Success!',
+                    text: '已將您登出',
+                    icon: 'success',
+                    confirmButtonText: 'OK'
+                })
+
+            })
+
+
+
+
+
+
+            function onClick(form) {
+                console.log('type of form', typeof (form))
+                console.log('form.title.value', form.title.value)
+                let dataToSent = new FormData(form)
+
+                for (let pair of dataToSent.entries()) {
+                    console.log("pair", pair)
+                }
+
+
+
+                if (localStorage.getItem('lat')) {
+
+                    dataToSent.append('lat', localStorage.getItem('lat'));
+                    dataToSent.append('lng', localStorage.getItem('lng'));
+
+
+                } else {
+                    alert("請在地圖上選取位置");
+                    return false;
+                }
+
+
+
+                if (localStorage.getItem('token')) {
+                    var jwt = localStorage.getItem('token')
+                    console.log('JWT', jwt)
+                    alert("資料格式正確，即將為您建檔！");
+                } else {
+                    alert('請先登入')
+                    window.location.href = '/admin/signIn.html'
+                }
+                console.log("dataToSent", dataToSent)
+                const accessToken = localStorage.getItem("token");
+                // fetch("/api/1.0/getgatherings/hostGathering", {
+
+                //     body: dataToSent,
+                //     headers: new Headers({
+                //         "Content-Type": "multipart/form-data",
+                //         "Authorization": `Bearer ${accessToken}`
+                //     }),
+                //     method: "POST"
+                // }).then((e => e.json())).then((e => {
+                //     console.log(e)
+                //     alert('error')
+                // }
+                // )).then(window.alert("註冊成功！")).catch((e => {
+                //     console.log(e)
+                // }
+                // ))
+
+
+                let xhr = new XMLHttpRequest();
+                let url = '/api/1.0/gatherings/hostGathering';
+                xhr.open('POST', url);
+                xhr.setRequestHeader('Authorization', `Bearer ${accessToken}`);
+                // xhr.setRequestHeader('Content-Type', 'multipart/form-data');
+
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4 && xhr.status === 200) {
+                        console.log('apiResponse.data', xhr.responseText)
+                        // if (xhr.responseText == 'admin') {
+                        //     alert('已成功輸入一筆資料')
+                        //     window.location.href = '/admin/product.html'
+                        // } else {
+                        //     alert('無權限操作此頁')
+                        // }
+                        window.location.reload();
+                    }
+                };
+                xhr.send(dataToSent);
+
+
+
+                // .finally(location.reload())
+
+
+
+                return false
+            }
 
 
 
