--- a/public/index.html
+++ b/public/index.html
@@ -510,6 +510,8 @@
                 text: '已將您登出',
                 icon: 'success',
                 confirmButtonText: 'OK'
+            }).then(function () {
+                window.location.href = '/sign.html'
             })
 
         })
